Added styling to footer items

--- a/index.html
+++ b/index.html
@@ -262,18 +262,18 @@
     <div class="container">
         <div class="home_social">
             <a
-              href="https://www.github.com/"
+              href="https://github.com/Yick-C"
               target="_blank"
               class="home_social-icon"
             >
-              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-github socials-icon"></i>
             </a>
             <a
               href="https://www.linkedin.com/"
               target="_blank"
               class="home_social-icon"
             >
-              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-linkedin socials-icon"></i>
             </a>
         </div>
         <p>
