--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>CC Portfolio</title>
     <link rel="icon" type = "image/png" href="./assets/images/avatar.svg">
     <script src="https://kit.fontawesome.com/f8c297ae49.js"crossorigin="anonymous"></script>
-
+    
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+          
     <!-- CSS Libraries -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -61,7 +63,7 @@
     <main id="main">
         <section id="about">
             <div class="about-container container">
-                <h2 class="about-title">About me</h2>
+                <h2 class="title">About me</h2>
                 <div class="row about-wrapper">
                     <div class="about-image col-md-6 col-sm-12">
                         <img
@@ -91,8 +93,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="skills-main-title">Skills</h1>
-                    <p class="skill-main-desc text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
+                    <h1 class="title skills-main-title">Skills</h1>
+                    <p class="skill-main-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
                         facilis repellat ab cupiditate alias </p>
                 </div>
             </div>
@@ -121,7 +123,7 @@
                         </div>
                         <div class="skill-content">
                             <h2 class="skill-title">Web Development</h2>
-                            <p class="skill-desc">HTML, CSS, Node.js, React, Express, Axios</p>
+                            <p class="skill-desc">HTML, CSS, Node.js, React</p>
                         </div>
                     </div>
                 </div>
@@ -139,6 +141,36 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- SKILL ICONS -->
+                <div class="col-md-4">
+                    <div class="skill-box">
+                        <div class="skill-content-icons">
+                            <i class="devicon-javascript-plain colored"></i>
+                            <i class="devicon-java-plain-wordmark colored"></i>
+                            <i class="devicon-csharp-line-wordmark colored"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="skill-box">
+                        <div class="skill-content-icons">
+                            <i class="devicon-html5-plain-wordmark colored"></i>
+                            <i class="devicon-css3-plain-wordmark colored"></i>
+                            <i class="devicon-nodejs-plain-wordmark colored"></i>
+                            <i class="devicon-react-original-wordmark colored"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="skill-box">
+                        <div class="skill-content-icons"> 
+                            <i class="devicon-azuresqldatabase-plain colored"></i>
+                            <i class="devicon-cosmosdb-plain-wordmark colored"></i>
+                            <i class="devicon-mongodb-plain-wordmark colored"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -146,7 +178,7 @@
     <!--======= PROJECTS =======-->
     <section id="projects" class="projects">
         <div class="container">
-            <h1 class="projects-title">Apps I've Built</h1>
+            <h1 class="title projects-title">Apps I've Built</h1>
         <p class="projects-desc">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
             facilis repellat ab cupiditate alias vero aliquid obcaecati quisquam
@@ -241,9 +273,9 @@
     </section>
     <section id="contact" class="contactPage">
         <div class="container">
+            <h1 class="title contact-title">Contact Me</h1>
+            <p class="contact-desc">Please fill out the form below if you would like to contact me.</p>
             <div id="contact">
-                <h1 class="contact-title">Contact Me</h1>
-                <p class="contact-desc">Please fill out the form below if you would like to contact me.</p>
                 <form class="contactForm">
                 <input type="text" class="name" placeholder="Your Name"/>
                 <input type="email" class="email" placeholder="Your Email" />
