--- a/index.html
+++ b/index.html
@@ -91,83 +91,85 @@
     <!--======= SKILLS =======-->
     <section id="skills" class="skills">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h1 class="title skills-main-title">Skills</h1>
-                    <p class="skill-main-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
-                        facilis repellat ab cupiditate alias </p>
+            <div class="skills-container"> 
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1 class="title skills-main-title">Skills</h1>
+                        <p class="skill-main-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
+                            facilis repellat ab cupiditate alias </p>
+                    </div>
                 </div>
-            </div>
-            <div class="skills-container row">
-                <div class="col-md-4">
-                    <div class="skill-box">
-                        <div class="skill-icon">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="skill-box">
+                            <div class="skill-icon">
+                                <span class="fa-stack fa-2x">
+                                    <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                    <i class="fa-solid fa-file-code"></i>
+                                </span>
+                            </div>
+                            <div class="skill-content">
+                                <h2 class="skill-title">Programming Languages</h2>
+                                <p class="skill-desc">Javascript, Java, C#</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="skill-box">
+                            <div class="skill-icon">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-regular fa-circle fa-stack-2x"></i>
-                                <i class="fa-solid fa-file-code"></i>
+                                <i class="fa-solid fa-computer"></i>
                             </span>
-                        </div>
-                        <div class="skill-content">
-                            <h2 class="skill-title">Programming Languages</h2>
-                            <p class="skill-desc">Javascript, Java, C#</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="skill-box">
-                        <div class="skill-icon">
-                        <span class="fa-stack fa-2x">
-                            <i class="fa-regular fa-circle fa-stack-2x"></i>
-                            <i class="fa-solid fa-computer"></i>
-                        </span>
-                        </div>
-                        <div class="skill-content">
-                            <h2 class="skill-title">Web Development</h2>
-                            <p class="skill-desc">HTML, CSS, Node.js, React</p>
+                            </div>
+                            <div class="skill-content">
+                                <h2 class="skill-title">Web Development</h2>
+                                <p class="skill-desc">HTML, CSS, Node.js, React</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="skill-box">
-                        <div class="skill-icon">
-                        <span class="fa-stack fa-2x">
-                            <i class="fa-regular fa-circle fa-stack-2x"></i>
-                            <i class="fa-solid fa-database"></i>
-                        </span>
-                        </div>
-                        <div class="skill-content">
-                            <h2 class="skill-title">Databases</h2>
-                            <p class="skill-desc">SQL, Azure CosmosDB, MongoDB</p>
+                    <div class="col-md-4">
+                        <div class="skill-box">
+                            <div class="skill-icon">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                <i class="fa-solid fa-database"></i>
+                            </span>
+                            </div>
+                            <div class="skill-content">
+                                <h2 class="skill-title">Databases</h2>
+                                <p class="skill-desc">SQL, Azure CosmosDB, MongoDB</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- SKILL ICONS -->
-                <div class="col-md-4">
-                    <div class="skill-box">
-                        <div class="skill-content-icons">
-                            <i class="devicon-javascript-plain colored"></i>
-                            <i class="devicon-java-plain-wordmark colored"></i>
-                            <i class="devicon-csharp-line-wordmark colored"></i>
+                    <!-- SKILL ICONS -->
+                    <div class="col-md-4">
+                        <div class="skill-box">
+                            <div class="skill-content-icons">
+                                <i class="devicon-javascript-plain colored"></i>
+                                <i class="devicon-java-plain-wordmark colored"></i>
+                                <i class="devicon-csharp-line-wordmark colored"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="skill-box">
-                        <div class="skill-content-icons">
-                            <i class="devicon-html5-plain-wordmark colored"></i>
-                            <i class="devicon-css3-plain-wordmark colored"></i>
-                            <i class="devicon-nodejs-plain-wordmark colored"></i>
-                            <i class="devicon-react-original-wordmark colored"></i>
+                    <div class="col-md-4">
+                        <div class="skill-box">
+                            <div class="skill-content-icons">
+                                <i class="devicon-html5-plain-wordmark colored"></i>
+                                <i class="devicon-css3-plain-wordmark colored"></i>
+                                <i class="devicon-nodejs-plain-wordmark colored"></i>
+                                <i class="devicon-react-original-wordmark colored"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="skill-box">
-                        <div class="skill-content-icons"> 
-                            <i class="devicon-azuresqldatabase-plain colored"></i>
-                            <i class="devicon-cosmosdb-plain-wordmark colored"></i>
-                            <i class="devicon-mongodb-plain-wordmark colored"></i>
+                    <div class="col-md-4">
+                        <div class="skill-box">
+                            <div class="skill-content-icons"> 
+                                <i class="devicon-azuresqldatabase-plain colored"></i>
+                                <i class="devicon-cosmosdb-plain-wordmark colored"></i>
+                                <i class="devicon-mongodb-plain-wordmark colored"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -178,97 +180,98 @@
     <!--======= PROJECTS =======-->
     <section id="projects" class="projects">
         <div class="container">
-            <h1 class="title projects-title">Apps I've Built</h1>
-        <p class="projects-desc">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
-            facilis repellat ab cupiditate alias vero aliquid obcaecati quisquam
-            fuga dolore.
-        </p>
-            <div class="row">
-                <div class="col-lg-4 col-sm-12">
-                    <h2 class="project-title">Project Title 1</h2>
-                    <div>
-                        <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Excepturi neque,</p>
+            <div class="projects-container">
+                <h1 class="title projects-title">Apps I've Built</h1>
+            <p class="projects-desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
+                facilis repellat ab cupiditate alias vero aliquid obcaecati quisquam
+                fuga dolore.
+            </p>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <h2 class="project-title">Project Title 1</h2>
+                        <div>
+                            <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Excepturi neque,</p>
+                        </div>
+                        <a
+                        rel="noreferrer"
+                        target="_blank"
+                        class="project-btn cta-btn--hero"
+                        href="#!"
+                        >
+                        See Live
+                        </a>
+                        <a
+                        rel="noreferrer"
+                        target="_blank"
+                        class="project-btn"
+                        href="#!"
+                        >
+                        Source Code
+                        </a>
                     </div>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="project-btn cta-btn--hero"
-                    href="#!"
-                    >
-                    See Live
-                    </a>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="project-btn"
-                    href="#!"
-                    >
-                    Source Code
-                    </a>
+                    <div class="col-lg-8 col-sm-12">
+                        <img src="./assets/images/todolist.jpg" alt="todolist" class="projectImg" />
+                    </div>
                 </div>
-                <div class="col-lg-8 col-sm-12">
-                    <img src="./assets/images/todolist.jpg" alt="todolist" class="projectImg" />
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <h2 class="project-title">Project Title 2</h2>
+                        <div>
+                            <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Excepturi neque,</p>
+                        </div>
+                        <a
+                        rel="noreferrer"
+                        target="_blank"
+                        class="project-btn"
+                        href="#!"
+                        >
+                        See Live
+                        </a>
+                        <a
+                        rel="noreferrer"
+                        target="_blank"
+                        class="project-btn"
+                        href="#!"
+                        >
+                        Source Code
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <img src="./assets/images/portfolio-1.jpg" alt="todolist" class="projectImg" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <h2 class="project-title">Project Title 3</h2>
+                        <div>
+                            <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Excepturi neque,</p>
+                        </div>
+                        <a
+                        rel="noreferrer"
+                        target="_blank"
+                        class="project-btn"
+                        href="#!"
+                        >
+                        See Live
+                        </a>
+                        <a
+                        rel="noreferrer"
+                        target="_blank"
+                        class="project-btn"
+                        href="#!"
+                        >
+                        Source Code
+                        </a>
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <img src="./assets/images/portfolio-2.jpg" alt="todolist" class="projectImg" />
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-12">
-                    <h2 class="project-title">Project Title 2</h2>
-                    <div>
-                        <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Excepturi neque,</p>
-                    </div>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="project-btn"
-                    href="#!"
-                    >
-                    See Live
-                    </a>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="project-btn"
-                    href="#!"
-                    >
-                    Source Code
-                    </a>
-                </div>
-                <div class="col-lg-8 col-sm-12">
-                    <img src="./assets/images/portfolio-1.jpg" alt="todolist" class="projectImg" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-12">
-                    <h2 class="project-title">Project Title 3</h2>
-                    <div>
-                        <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Excepturi neque,</p>
-                    </div>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="project-btn"
-                    href="#!"
-                    >
-                    See Live
-                    </a>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="project-btn"
-                    href="#!"
-                    >
-                    Source Code
-                    </a>
-                </div>
-                <div class="col-lg-8 col-sm-12">
-                    <img src="./assets/images/portfolio-2.jpg" alt="todolist" class="projectImg" />
-                </div>
-            </div>
-            
         </div>
     </section>
     <section id="contact" class="contactPage">
