Added padding in projects section

--- a/index.html
+++ b/index.html
@@ -180,95 +180,101 @@
     <!--======= PROJECTS =======-->
     <section id="projects" class="projects">
         <div class="container">
-            <div class="projects-container">
-                <h1 class="title projects-title">Apps I've Built</h1>
+            <h1 class="title projects-title">Apps I've Built</h1>
             <p class="projects-desc">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
                 facilis repellat ab cupiditate alias vero aliquid obcaecati quisquam
                 fuga dolore.
             </p>
+            <div class="projects-container">
+                <div class="project-box">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
-                        <h2 class="project-title">Project Title 1</h2>
-                        <div>
-                            <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Excepturi neque,</p>
+                        <div class="col-lg-4 col-sm-12">
+                            <h2 class="project-title">Project Title 1</h2>
+                            <div>
+                                <p class="mb-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Excepturi neque,</p>
+                            </div>
+                            <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="project-btn cta-btn--hero"
+                            href="#!"
+                            >
+                            See Live
+                            </a>
+                            <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="project-btn"
+                            href="#!"
+                            >
+                            Source Code
+                            </a>
                         </div>
-                        <a
-                        rel="noreferrer"
-                        target="_blank"
-                        class="project-btn cta-btn--hero"
-                        href="#!"
-                        >
-                        See Live
-                        </a>
-                        <a
-                        rel="noreferrer"
-                        target="_blank"
-                        class="project-btn"
-                        href="#!"
-                        >
-                        Source Code
-                        </a>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <img src="./assets/images/todolist.jpg" alt="todolist" class="projectImg" />
+                        <div class="col-lg-8 col-sm-12">
+                            <img src="./assets/images/todolist.jpg" alt="todolist" class="projectImg" />
+                        </div>
                     </div>
                 </div>
+                <div class="project-box">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
-                        <h2 class="project-title">Project Title 2</h2>
-                        <div>
-                            <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Excepturi neque,</p>
+                        <div class="col-lg-4 col-sm-12">
+                            <h2 class="project-title">Project Title 2</h2>
+                            <div>
+                                <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Excepturi neque,</p>
+                            </div>
+                            <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="project-btn"
+                            href="#!"
+                            >
+                            See Live
+                            </a>
+                            <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="project-btn"
+                            href="#!"
+                            >
+                            Source Code
+                            </a>
                         </div>
-                        <a
-                        rel="noreferrer"
-                        target="_blank"
-                        class="project-btn"
-                        href="#!"
-                        >
-                        See Live
-                        </a>
-                        <a
-                        rel="noreferrer"
-                        target="_blank"
-                        class="project-btn"
-                        href="#!"
-                        >
-                        Source Code
-                        </a>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <img src="./assets/images/portfolio-1.jpg" alt="todolist" class="projectImg" />
+                        <div class="col-lg-8 col-sm-12">
+                            <img src="./assets/images/portfolio-1.jpg" alt="todolist" class="projectImg" />
+                        </div>
                     </div>
                 </div>
+                <div class="project-box">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
-                        <h2 class="project-title">Project Title 3</h2>
-                        <div>
-                            <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Excepturi neque,</p>
+                        <div class="col-lg-4 col-sm-12">
+                            <h2 class="project-title">Project Title 3</h2>
+                            <div>
+                                <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Excepturi neque,</p>
+                            </div>
+                            <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="project-btn"
+                            href="#!"
+                            >
+                            See Live
+                            </a>
+                            <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="project-btn"
+                            href="#!"
+                            >
+                            Source Code
+                            </a>
                         </div>
-                        <a
-                        rel="noreferrer"
-                        target="_blank"
-                        class="project-btn"
-                        href="#!"
-                        >
-                        See Live
-                        </a>
-                        <a
-                        rel="noreferrer"
-                        target="_blank"
-                        class="project-btn"
-                        href="#!"
-                        >
-                        Source Code
-                        </a>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <img src="./assets/images/portfolio-2.jpg" alt="todolist" class="projectImg" />
+                        <div class="col-lg-8 col-sm-12">
+                            <img src="./assets/images/portfolio-2.jpg" alt="todolist" class="projectImg" />
+                        </div>
                     </div>
                 </div>
             </div>
