Added back to top icon and updated font sizes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
+    <div id="top"></div>
     <!--======= HEADER =======-->
     <header id="header" class="fixed-top">
         <a class="logo" href="#">CC</a>
@@ -301,6 +302,9 @@
 <!--======= FOOTER =======-->
 <footer>
     <div class="container">
+        <a href="#top" class="back-to-top">
+            <i class="fa-solid fa-caret-up"></i>
+        </a>
         <div class="home_social">
             <a
               href="https://github.com/Yick-C"
