Updated mobile styling and fonts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./styles.css"/>
@@ -99,9 +99,6 @@
                             <p class="about-content-text">
                                 Technology really excites me as it is always changing to improve our futures and how you can utilise your creativity to bring your ideas to life. 
                             </p>
-                            <p class="about-content-text">
-                                As someone who really enjoys seeing and learning new things, this is the perfect area to satisfy my big curiosity with all the interesting new technologies while also being able to help people with my work.
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -115,8 +112,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h1 class="title skills-main-title">Skills</h1>
-                        <p class="skill-main-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
-                            facilis repellat ab cupiditate alias </p>
+                        <p class="skill-main-desc">As someone who really enjoys seeing and learning new things, this is the perfect area to satisfy my big curiosity with all the interesting technologies.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -186,11 +182,9 @@
     <!--======= PROJECTS =======-->
     <section id="projects" class="projects">
         <div class="container">
-            <h1 class="title">Apps I've Built</h1>
+            <h1 class="title">Projects</h1>
             <p class="projects-desc">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo
-                facilis repellat ab cupiditate alias vero aliquid obcaecati quisquam
-                fuga dolore.
+                Here are some personal projects that I have worked on and I will keep working on creating more.
             </p>
             <div class="projects-container">
                 <div class="project-box">
