Updated mobile styling

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="greetings-animation"><span></span></p>
             <h1 class="hero-title">I'm <span class="introName">Christina</span></h1>
             <p  class="hero-title">Software Developer</p>
-            <p class="introPara">Passionate about creating innovative solutions that elevate user experiences </p>
+            <p class="introPara">Passionate about creating innovative solutions <br/> that elevate user experiences </p>
         </div>
     </section>
     
@@ -128,7 +128,7 @@
                                 <h2 class="skill-title">Programming Languages</h2>
                                 <p class="skill-desc">Javascript, Java, C#</p>
                             </div>
-                            <div class="skill-icon">
+                            <div class="skill-icon-lang">
                                 <i class="devicon-javascript-plain colored"></i>
                                 <i class="devicon-java-plain-wordmark colored"></i>
                                 <i class="devicon-csharp-line-wordmark colored"></i>
@@ -147,7 +147,7 @@
                                 <h2 class="skill-title">Web Development</h2>
                                 <p class="skill-desc">HTML, CSS, Node.js, React</p>
                             </div>
-                            <div class="skill-icon">
+                            <div class="skill-icon-lang">
                                 <i class="devicon-html5-plain-wordmark colored"></i>
                                 <i class="devicon-css3-plain-wordmark colored"></i>
                                 <i class="devicon-nodejs-plain-wordmark colored"></i>
@@ -167,7 +167,7 @@
                                 <h2 class="skill-title">Databases</h2>
                                 <p class="skill-desc">SQL, Azure CosmosDB, MongoDB</p>
                             </div>
-                            <div class="skill-icon"> 
+                            <div class="skill-icon-lang"> 
                                 <i class="devicon-azuresqldatabase-plain colored"></i>
                                 <i class="devicon-cosmosdb-plain-wordmark colored"></i>
                                 <i class="devicon-mongodb-plain-wordmark colored"></i>
@@ -189,10 +189,10 @@
             <div class="projects-container">
                 <div class="project-box">
                 <div class="row">
-                        <div class="col-lg-4 col-sm-12">
+                        <div class="col-lg-4 col-sm-12 project-desc">
                             <h2 class="project-title">Project Title 1</h2>
                             <div>
-                                <p class="mb-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <p class="mb-6 project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     Excepturi neque,</p>
                             </div>
                             <a
@@ -219,10 +219,10 @@
                 </div>
                 <div class="project-box">
                 <div class="row">
-                        <div class="col-lg-4 col-sm-12">
+                        <div class="col-lg-4 col-sm-12 project-desc">
                             <h2 class="project-title">Project Title 2</h2>
                             <div>
-                                <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <p class="mb-4 project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     Excepturi neque,</p>
                             </div>
                             <a
@@ -249,10 +249,10 @@
                 </div>
                 <div class="project-box">
                 <div class="row">
-                        <div class="col-lg-4 col-sm-12">
+                        <div class="col-lg-4 col-sm-12 project-desc">
                             <h2 class="project-title">Project Title 3</h2>
                             <div>
-                                <p class="mb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <p class="mb-4 project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     Excepturi neque,</p>
                             </div>
                             <a
