--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./styles.css"/>
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head> 
 <body>
     <div id="top"></div>
@@ -65,7 +68,7 @@
     </header>
 
     <!--======= HERO =======-->
-    <section id="hero" class="hero">
+    <section id="hero" class="hero" data-aos="fade-down">
         <div class="hero__pic-container">
             <img src="./assets/images/undraw_welcome_light.svg" alt="Dream world woman" id="heroImage">
         </div>
@@ -79,7 +82,7 @@
     
     <!--======= ABOUT =======-->
     <main id="main">
-        <section id="about">
+        <section id="about" data-aos="slide-right" data-aos-duration='9000'>
             <h2 class="about-title">About me</h2>
             <div class="about-container container">
                 <div class="row about-wrapper">
@@ -106,7 +109,7 @@
         </section>
     
     <!--======= SKILLS =======-->
-    <section id="skills" class="skills">
+    <section id="skills" class="skills" data-aos="slide-left" data-aos-duration='9000'>
         <div class="container">
             <div class="skills-container"> 
                 <div class="row">
@@ -181,14 +184,14 @@
 
     <!--======= PROJECTS =======-->
     <section id="projects" class="projects">
-        <div class="container">
+        <div class="container" data-aos="fade-up">
             <h1 class="title">Projects</h1>
             <p class="projects-desc">
                 Here are some personal projects that I have worked on and I will keep working on creating more.
             </p>
             <div class="projects-container">
                 <div class="project-box">
-                <div class="row">
+                <div class="row" data-aos="fade-up">
                         <div class="col-lg-4 col-sm-12 project-desc">
                             <h2 class="project-title">Project Title 1</h2>
                             <div>
@@ -218,7 +221,7 @@
                     </div>
                 </div>
                 <div class="project-box">
-                <div class="row">
+                <div class="row" data-aos="fade-up">
                         <div class="col-lg-4 col-sm-12 project-desc">
                             <h2 class="project-title">Project Title 2</h2>
                             <div>
@@ -248,7 +251,7 @@
                     </div>
                 </div>
                 <div class="project-box">
-                <div class="row">
+                <div class="row" data-aos="fade-up">
                         <div class="col-lg-4 col-sm-12 project-desc">
                             <h2 class="project-title">Project Title 3</h2>
                             <div>
@@ -280,7 +283,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="contactPage">
+    <section id="contact" class="contactPage" data-aos="fade-up">
         <div class="container">
             <h1 class="title contact-title">Contact Me</h1>
             <div class="contact__form">
@@ -328,7 +331,7 @@
         </p>
     </div>
 </footer>
-
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
