--- a/index.html
+++ b/index.html
@@ -148,13 +148,14 @@
                             </div>
                             <div class="skill-content">
                                 <h2 class="skill-title">Web Development</h2>
-                                <p class="skill-desc">HTML, CSS, Node.js, React</p>
+                                <p class="skill-desc">HTML, CSS, Node.js, React, Next.js</p>
                             </div>
                             <div class="skill-icon-lang">
                                 <i class="devicon-html5-plain-wordmark colored"></i>
                                 <i class="devicon-css3-plain-wordmark colored"></i>
                                 <i class="devicon-nodejs-plain-wordmark colored"></i>
                                 <i class="devicon-react-original-wordmark colored"></i>
+                                <i class="devicon-nextjs-original-wordmark colored"></i>
                             </div>
                         </div>
                     </div>
@@ -168,12 +169,13 @@
                             </div>
                             <div class="skill-content">
                                 <h2 class="skill-title">Databases</h2>
-                                <p class="skill-desc">SQL, Azure CosmosDB, MongoDB</p>
+                                <p class="skill-desc">SQL, Azure CosmosDB, MongoDB, PostgreSQL</p>
                             </div>
                             <div class="skill-icon-lang"> 
                                 <i class="devicon-azuresqldatabase-plain colored"></i>
                                 <i class="devicon-cosmosdb-plain-wordmark colored"></i>
                                 <i class="devicon-mongodb-plain-wordmark colored"></i>
+                                <i class="devicon-postgresql-plain-wordmark colored"></i>
                             </div>
                         </div>
                     </div>
@@ -193,16 +195,15 @@
                 <div class="project-box">
                 <div class="row" data-aos="fade-up">
                         <div class="col-lg-4 col-sm-12 project-desc">
-                            <h2 class="project-title">Project Title 1</h2>
+                            <h2 class="project-title">Chat Messenging App</h2>
                             <div>
-                                <p class="mb-6 project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Excepturi neque,</p>
+                                <p class="mb-6 project-text">This Chat Messaging App is a web application built with React and Stream Chat, allowing users to communicate in real-time. Users can sign up or sign in to the platform to engage in one-on-one or group conversations. </p>
                             </div>
                             <a
                             rel="noreferrer"
                             target="_blank"
                             class="project-btn cta-btn--hero"
-                            href="#!"
+                            href="https://chat-messaging-cc-app.netlify.app/"
                             >
                             See Live
                             </a>
@@ -210,23 +211,22 @@
                             rel="noreferrer"
                             target="_blank"
                             class="project-btn"
-                            href="#!"
+                            href="https://github.com/Yick-C/chat-messaging-app"
                             >
                             Source Code
                             </a>
                         </div>
                         <div class="col-lg-8 col-sm-12">
-                            <img src="./assets/images/todolist.jpg" alt="todolist" class="projectImg" />
+                            <img src="./assets/images/chat-project.png" alt="chat messaging" class="projectImg" />
                         </div>
                     </div>
                 </div>
                 <div class="project-box">
                 <div class="row" data-aos="fade-up">
                         <div class="col-lg-4 col-sm-12 project-desc">
-                            <h2 class="project-title">Project Title 2</h2>
+                            <h2 class="project-title">Language Word List</h2>
                             <div>
-                                <p class="mb-4 project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Excepturi neque,</p>
+                                <p class="mb-4 project-text">A web application for users to search for Chinese words grouped in levels that are in the proficiency test. The back-end web api is built using Java SpringBoot connected to a Postgres database and the front-end is created using React.</p>
                             </div>
                             <a
                             rel="noreferrer"
@@ -240,13 +240,13 @@
                             rel="noreferrer"
                             target="_blank"
                             class="project-btn"
-                            href="#!"
+                            href="https://github.com/Yick-C/hsk-words"
                             >
                             Source Code
                             </a>
                         </div>
                         <div class="col-lg-8 col-sm-12">
-                            <img src="./assets/images/portfolio-1.jpg" alt="todolist" class="projectImg" />
+                            <img src="./assets/images/hsk-words.png" alt="todolist" class="projectImg" />
                         </div>
                     </div>
                 </div>
