Added link to project 2

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             rel="noreferrer"
                             target="_blank"
                             class="project-btn"
-                            href="#!"
+                            href="https://hsk-words-list-cc.netlify.app/"
                             >
                             See Live
                             </a>
