Updated projects section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="container" data-aos="fade-up">
             <h1 class="title">Projects</h1>
             <p class="projects-desc">
-                Here are some personal projects that I have worked on and I will keep working on creating more.
+                Here are some personal projects that I have worked on.
             </p>
             <div class="projects-container">
                 <div class="project-box">
@@ -247,36 +247,6 @@
                         </div>
                         <div class="col-lg-8 col-sm-12">
                             <img src="./assets/images/hsk-words.png" alt="todolist" class="projectImg" />
-                        </div>
-                    </div>
-                </div>
-                <div class="project-box">
-                <div class="row" data-aos="fade-up">
-                        <div class="col-lg-4 col-sm-12 project-desc">
-                            <h2 class="project-title">Project Title 3</h2>
-                            <div>
-                                <p class="mb-4 project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Excepturi neque,</p>
-                            </div>
-                            <a
-                            rel="noreferrer"
-                            target="_blank"
-                            class="project-btn"
-                            href="#!"
-                            >
-                            See Live
-                            </a>
-                            <a
-                            rel="noreferrer"
-                            target="_blank"
-                            class="project-btn"
-                            href="#!"
-                            >
-                            Source Code
-                            </a>
-                        </div>
-                        <div class="col-lg-8 col-sm-12">
-                            <img src="./assets/images/portfolio-2.jpg" alt="todolist" class="projectImg" />
                         </div>
                     </div>
                 </div>
