Improved hamburger menu look when opened

--- a/index.html
+++ b/index.html
@@ -47,17 +47,21 @@
                         <li><a href="#projects" class="nav-link">Projects <i class="fa-solid fa-code"></i></a></li>
                         <li><a href="#contact" class="nav-link">Contact <i class="fa-solid fa-at"></i></a></li>
                     </ul>
+                    <!-- Hamburger Icon -->
                     <div id="nav-toggle" onclick="openNavbar(this)">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
-                        <ul id="navbar-mobile">
-                            <li><a href="#" class="nav-link">Home <i class="fa-solid fa-house"></i></a></li>
-                            <li><a href="#about" class="nav-link">About <i class="fa-solid fa-user"></i></a></li>
-                            <li><a href="#skills" class="nav-link">Skills <i class="fa-solid fa-star"></i></a></li>
-                            <li><a href="#projects" class="nav-link">Projects <i class="fa-solid fa-code"></i></a></li>
-                            <li><a href="#contact" class="nav-link">Contact <i class="fa-solid fa-at"></i></a></li>
-                        </ul>
+                    </div>
+
+                    <!-- Mobile Navigation Menu -->
+                    <ul id="navbar-mobile" class="hidden">
+                        <li class="nav-link"><a href="#" >Home <i class="fa-solid fa-house"></i></a></li>
+                        <li class="nav-link"><a href="#about" >About <i class="fa-solid fa-user"></i></a></li>
+                        <li class="nav-link"><a href="#skills" >Skills <i class="fa-solid fa-star"></i></a></li>
+                        <li class="nav-link"><a href="#projects" >Projects <i class="fa-solid fa-code"></i></a></li>
+                        <li class="nav-link"><a href="#contact" >Contact <i class="fa-solid fa-at"></i></a></li>
+                    </ul>
                 </nav>
             </div>
         
