--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <link rel="stylesheet" href="./styles.css"/>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+    
+    <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js" defer></script>
+    <script src="https://files.bpcontent.cloud/2025/06/28/11/20250628114534-19U32EYO.js" defer></script>
+    
 </head> 
 <body>
     <div id="top"></div>
